--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -30,7 +30,7 @@ body {
   text-align: center;
   font-weight: normal;
   font-size: 1rem;
-  margin-top: .7px;
+  margin-top: 0px;
 }
 
 .website {
@@ -38,7 +38,6 @@ body {
   text-align: center;
   font-weight: normal;
   font-size: .8rem;
-  margin-top: 1px;
 }
 
 .card-button {
@@ -48,20 +47,29 @@ body {
 }
 
 .card-button > * {
-  height: 34px;
+  height: auto;
   font-size: medium;
   border-radius: 6px;
+  border: solid 2px salmon;
   width: 40%;
+
 }
 
-.linkedin-button {
+.linkedin-button:visited, .linkedin-button:link {
   color: #fff;
   border: solid 1px #fff ;
+  text-align: center;
+  padding: 4px 0;
+  text-decoration: none;
   background: #5093E2 url(../public/svg/linkedin-small.svg) no-repeat 10px center;
 }
 
-.mail-button {
+.mail-button:visited, .mail-button:link {
+  color: #1A1B21;
+  text-decoration: none;
   border: solid 1px #D1D5DB;
+  text-align: center;
+  padding: 4px 0;
   background: #fff url(../public/svg/mail.svg) no-repeat 10px center;
 }
 
